fix border radius on focus visible

--- a/src/assets/scss/components/_buttonLightModeToggle.scss
+++ b/src/assets/scss/components/_buttonLightModeToggle.scss
@@ -14,6 +14,10 @@
   border-radius: 100%;
   cursor: pointer;
 
+  &:focus-visible {
+    border-radius: 100%;
+  }
+
   &::after {
     content: '🌓';
   }
